fix: top bar alignement

--- a/web/style.css
+++ b/web/style.css
@@ -75,14 +75,13 @@ abbr[title]:after {
   position: relative;
   box-shadow: 0 1px 0 rgba(0,0,0, .1);
   padding: 26px 0;
+  margin-left: -15px;
 }
 
 .c-top-bar__inner {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-left: -15px;
-  padding: 0;
 }
 
 .c-top-bar__inner > * {
